--- a/personal-site/package.json
+++ b/personal-site/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@types/photoswipe": "^4.1.0",
+    "photoswipe": "^4.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
